@@ -1775,14 +1775,16 @@ void display::enable_menu(const std::string& item, bool enable)
 	}
 }
 
-void display::announce(const std::string& message, const color_t& color, int lifetime)
+void display::announce(const std::string& message, const color_t& color, const announce_options& options)
 {
-	font::remove_floating_label(prevLabel);
+	if(options.discard_previous) {
+		font::remove_floating_label(prevLabel);
+	}
 	font::floating_label flabel(message);
 	flabel.set_font_size(font::SIZE_XLARGE);
 	flabel.set_color(color);
 	flabel.set_position(map_outside_area().w/2, map_outside_area().h/3);
-	flabel.set_lifetime(lifetime);
+	flabel.set_lifetime(options.lifetime);
 	flabel.set_clip_rect(map_outside_area());
 
 	prevLabel = font::add_floating_label(flabel);
